--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -140,47 +140,47 @@
         background-image: none !important;
       }
       .legend-item-2 {
-        background-color: #29a634;
+        background-color: #2DA238;
         background-image: url("bg-2.png");
         background-size: initial;
         background-position-x: -1px;
         background-position-y: -1px;
       }
       .legend-item-3 {
-        background-color: #d99e0b;
+        background-color: #FF801D;
         background-image: url("textures/tm-grid-light-200.svg");
         background-position-x: 1px;
         background-position-y: 1px;
       }
       .legend-item-4 {
-        background-color: #d13913;
+        background-color: #D62527;
         background-image: url("textures/tm-line-vertical-down-light-100.svg");
       }
       .legend-item-5 {
-        background-color: #8f398f;
+        background-color: #9464BA;
         background-image: url("bg-5.png");
         background-size: initial;
       }
       .legend-item-6 {
-        background-color: #2965cc;
+        background-color: #1D75B2;
         background-image: url("textures/tm-square-100.svg");
         background-position-x: 3px;
         background-position-y: 2px;
       }
       .legend-item-7 {
-        background-color: #db2c6f;
+        background-color: #E374BF;
         background-image: url("textures/tm-slash-forward-100.svg");
         background-position-x: 2px;
         background-position-y: 1px;
       }
       .legend-item-8 {
-        background-color: #00b3a4;
+        background-color: #15BECE;
         background-image: url("textures/tm-line-vertical-light-100.svg");
         background-position-x: 1px;
         background-position-y: -4px;
       }
       .legend-item-9 {
-        background-color: #96622d;
+        background-color: #8C564B;
         background-image: url("textures/tm-plus-200.svg");
         background-position-x: 11px;
         background-position-y: 1px;
