Add download link to website

--- a/website/index.html
+++ b/website/index.html
@@ -69,7 +69,11 @@
             href="https://github.com/azavea/texturemap#readme"
             >Documentation</a
           >
-          <a class="footer-primary__link" href="#">Download</a>
+          <a
+            class="footer-primary__link"
+            href="https://github.com/azavea/texturemap/releases/latest/download/texturemap.zip"
+            >Download</a
+          >
           <a
             class="footer-primary__link"
             href="https://github.com/azavea/texturemap"
@@ -96,7 +100,11 @@
                   class="hero__button-gettingstarted"
                   >Get started</a
                 >
-                <a href="" class="hero__button-download">Download</a>
+                <a
+                  href="https://github.com/azavea/texturemap/releases/latest/download/texturemap.zip"
+                  class="hero__button-download"
+                  >Download</a
+                >
               </div>
             </div>
             <div id="map" class="map texturemap-on"></div>
@@ -333,7 +341,11 @@
             href="https://github.com/azavea/texturemap#readme"
             >Documentation</a
           >
-          <a class="footer-primary__link" href="#">Download</a>
+          <a
+            class="footer-primary__link"
+            href="https://github.com/azavea/texturemap/releases/latest/download/texturemap.zip"
+            >Download</a
+          >
           <a
             class="footer-primary__link"
             href="https://github.com/azavea/texturemap"
